2009-04-22  DJ Delorie  <dj@redhat.com>

	* config/m32c/m32c.h: Update GTY annotations to new syntax.

2009-04-22  Jakub Jelinek  <jakub@redhat.com>

	* alias.c (find_base_term): Move around LO_SUM case, so that
	CONST falls through into PLUS/MINUS handling.

	PR c/39855
	* fold-const.c (fold_binary) <case LSHIFT_EXPR>: When optimizing
	into 0, use omit_one_operand.

2009-04-23  Ben Elliston  <bje@au.ibm.com>

	* config/rs6000/linux-unwind.h (get_regs): Remove type
	puns. Change the type of `pc' to an array of unsigned ints and
	update all users.  Constify frame24.

2009-04-22  DJ Delorie  <dj@redhat.com>

	* config/m32c/m32c.c (m32c_special_page_vector_p): Move
	declarations before code.
	(current_function_special_page_vector): Likewise.
	(m32c_expand_insv): Silence a warning.

2009-04-21  Taras Glek <tglek@mozilla.com>

	* alias.c: Update GTY annotations to new syntax.
	* basic-block.h: Likewise.
	* bitmap.h: Likewise.
	* c-common.h: Likewise.
	* c-decl.c: Likewise.
	* c-parser.c: Likewise.
	* c-pragma.c: Likewise.
	* c-tree.h: Likewise.
	* cfgloop.h: Likewise.
	* cgraph.h: Likewise.
	* config/alpha/alpha.c: Likewise.
	* config/arm/arm.h: Likewise.
	* config/avr/avr.h: Likewise.
	* config/bfin/bfin.c: Likewise.
	* config/cris/cris.c: Likewise.
	* config/darwin.c: Likewise.
	* config/frv/frv.c: Likewise.
	* config/i386/i386.c: Likewise.
	* config/i386/i386.h: Likewise.
	* config/i386/winnt.c: Likewise.
	* config/ia64/ia64.h: Likewise.
	* config/iq2000/iq2000.c: Likewise.
	* config/mips/mips.c: Likewise.
	* config/mmix/mmix.h: Likewise.
	* config/pa/pa.c: Likewise.
	* config/pa/pa.h: Likewise.
	* config/rs6000/rs6000.c: Likewise.
	* config/s390/s390.c: Likewise.
	* config/sparc/sparc.c: Likewise.
	* config/xtensa/xtensa.c: Likewise.
	* cselib.h: Likewise.
	* dbxout.c: Likewise.
	* dwarf2out.c: Likewise.
	* except.c: Likewise.
	* except.h: Likewise.
	* fixed-value.h: Likewise.
	* function.c: Likewise.
	* function.h: Likewise.
	* gimple.h: Likewise.